@@ -469,5 +469,6 @@ $defaultWords['is not writeable.'] = 'is not writeable.';
 $defaultWords['does not exist.'] = 'does not exist.';
 $defaultWords['Please change file permissions before editing.'] = 'Please change file permissions before editing.';
 $defaultWords['Please create it.'] = 'Please create it.';
+$defaultWords['Default theme'] = 'Default theme';
 
 ?>
