@@ -151,6 +151,10 @@ function toggleTransElements() {
                 <label for="conf[site][adminGuiTheme]">{translate(#Admin GUI theme#)}</label>
                 <input type="text" name="conf[site][adminGuiTheme]" id="conf[site][adminGuiTheme]" value="{conf[site][adminGuiTheme]}" />
             </p>
+            <p>
+                <label for="conf[site][defaultTheme]">{translate(#Default theme#)}</label>
+                <input type="text" name="conf[site][defaultTheme]" id="conf[site][defaultTheme]" value="{conf[site][defaultTheme]}" />
+            </p>
 
             <h3>{translate(#Paths#)}</h3>
             <p>
